# hungryapp

./: package.json
api/: settings.py  wsgi.py
backend/: pyproject.toml
backend/api/: asgi.py  urls.py
frontend/: package.json
frontend/pages/: index.js
frontend/public/: sw.js
src/: package-lock.json  package.json
src/public/: manifest.json  sw.js
src/styles/: Home.module.css
