[tool.poetry]
name = "hungryapp"
version = "0.1.0"
description = "API hungryapp"
authors = ["higorvinicius <higorvmonteiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
dj-database-url = "^0.5.0"
dj-static = "^0.0.6"
python-decouple = "^3.6"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
